# app_corretora

./: .gitignore  README.md  pyproject.toml
corretora/: db.sqlite3
corretora/app_corretora/: apps.py  models.py  serialaizers.py  views.py
corretora/app_corretora/migrations/: 0001_initial.py
corretora/corretora/: asgi.py  settings.py  urls.py  wsgi.py
